/**
 * Scenario Interface - Universal hibernation pattern with typed Model
 * Web4 principle: Single interface per file, generic model support
 * Purpose: Universal scenario structure supporting any Model-compliant component
 * 
 * ⚠️ TRON QA WARNING: Cannot foresee complexity of template typed scenario
 * Future monitoring required for template complexity management
 * Template complexity concerns documented for future assessment
 */

import { IOR } from './IOR.interface.js';
import { Model } from './Model.interface.js';

export interface Scenario<T extends Model = Model> {
  ior: IOR;                        // Component identification and versioning
  owner: string;                   // JSON string with ownership metadata
  model: T;                        // Typed model extending minimal base Model interface
}